--- a/index.html
+++ b/index.html
@@ -1,47 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Results summary component</title>
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./assets/images/favicon-32x32.png"
+        />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+        <title>Frontend Mentor | Results summary component</title>
 
-  Your Result
-  76
-  of 100
+        <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+        <style>
+            .attribution {
+                font-size: 11px;
+                text-align: center;
+            }
+            .attribution a {
+                color: hsl(228, 45%, 44%);
+            }
+        </style>
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <div class="results">
+            <div class="left">
+                <div>Your Result</div>
+                <div>
+                    <p>76</p>
+                    <p>of 100</p>
+                </div>
+                <div>Great</div>
+                <div class="score-stats">
+                    You scored higher than 65% of <br />the people who have
+                    taken <br />
+                    these tests.
+                </div>
+            </div>
+            <div class="right">
+                <span>Summary</span>
+                <div>
+                    <span
+                        ><span
+                            ><span
+                                ><img
+                                    src="./assets/images/icon-reaction.svg"
+                                    alt="Reaction svg" /></span
+                            ><span>Reaction</span></span
+                        >
+                        <span><span>80</span> / 100</span></span
+                    >
+                    <span
+                        ><span
+                            ><span
+                                ><img
+                                    src="./assets/images/icon-memory.svg"
+                                    alt="Memory svg" /></span
+                            ><span>Memory</span></span
+                        >
+                        <span><span>92</span> / 100</span></span
+                    >
+                    <span
+                        ><span
+                            ><span>
+                                <img
+                                    src="./assets/images/icon-verbal.svg"
+                                    alt="Verbal svg" /></span
+                            ><span>Verbal</span></span
+                        >
+                        <span><span>61</span> / 100</span></span
+                    >
+                    <span
+                        ><span
+                            ><span
+                                ><img
+                                    src="./assets/images/icon-visual.svg"
+                                    alt="Visual svg" /></span
+                            ><span>Visual</span></span
+                        >
+                        <span><span>72</span> / 100</span></span
+                    >
+                </div>
+                <button>Continue</button>
+            </div>
+        </div>
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+        <div class="attribution">
+            Challenge by
+            <a
+                href="https://www.frontendmentor.io?ref=challenge"
+                target="_blank"
+                >Frontend Mentor</a
+            >. Coded by <a href="https://github.com/Aztarok">Aztarok</a>.
+        </div>
+    </body>
 </html>
